# video_automation

./: .env.example  Cargo.toml  config.toml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: audio.rs  handlers.rs  main.rs  store.rs  tache.rs  ui.rs
apps/server/ui/: app.js  index.html  style.css
crates/agents/: Cargo.toml
crates/agents/src/: conteur.rs  lib.rs  monteur.rs  publieur.rs  realisateur.rs  visuel.rs
crates/core/: Cargo.toml
crates/core/src/: annulation.rs  asset.rs  config.rs  error.rs  etat.rs  lib.rs  projet.rs  scenario.rs  voix.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  hello.rs  lib.rs  scenariste.rs  visuel.rs
crates/llm/tests/: hello_world.rs  scenariste.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: affiner.rs  lib.rs  stockage.rs  validation.rs
crates/tools/: Cargo.toml
crates/tools/src/: ffmpeg.rs  images.rs  lib.rs  sous_titres.rs  transcrire.rs  voix.rs  youtube.rs
docs/: README.md  agenda.md  architecture.md
