[package]
name = "cli"
edition.workspace = true
license.workspace = true

[dependencies]
video_core.workspace = true
llm.workspace = true
tools.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
dotenvy.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde_json = "1"
