[package]
name = "server"
edition.workspace = true
license.workspace = true

[dependencies]
video_core.workspace = true
agents.workspace = true
llm.workspace = true
tools.workspace = true
pipeline.workspace = true
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["fs", "process", "sync", "time"] }
# ReceiverStream (SSE phase 7) : la feature `sync` est requise ; la crate est
# deja dans l'arbre de dependances (axum/sqlx), aucun telechargement nouveau.
tokio-stream = { version = "0.1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
