[package]
name = "agents"
edition.workspace = true
license.workspace = true

[dependencies]
video_core.workspace = true
llm.workspace = true
tools.workspace = true
pipeline.workspace = true

[dev-dependencies]
axum.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json = "1"
tokio = { workspace = true, features = ["net"] }
tempfile = "3"
