[package]
name = "llm"
edition.workspace = true
license.workspace = true

[dependencies]
video_core.workspace = true
rig-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1"
schemars.workspace = true
anyhow.workspace = true

[dev-dependencies]
dotenvy.workspace = true
