[package]
name = "llm"
edition.workspace = true
license.workspace = true

[dependencies]
video_core.workspace = true
tools.workspace = true
rig-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = "1"
schemars.workspace = true
anyhow.workspace = true
reqwest.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tempfile = "3"
