[package]
name = "tools"
edition.workspace = true
license.workspace = true

[dependencies]
video_core.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["process", "net"] }

[dev-dependencies]
axum.workspace = true
tempfile = "3"
